intento coneccion bases datos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 
+# Configuración de conexión a la base de datos MySQL
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:44833/railway
+spring.datasource.username=root
+spring.datasource.password=ba-h12d-DeAFGe-H5b1eFDd2-DacCcDB
+
+
+# Configuración de Hibernate
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
