--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,11 @@ spring.datasource.url=jdbc:mysql://roundhouse.proxy.rlwy.net:44833/railway
 spring.datasource.username=root
 spring.datasource.password=ba-h12d-DeAFGe-H5b1eFDd2-DacCcDB
 
+# Configuración del puerto del servidor
+server.port=8081
+
 
 # Configuración de Hibernate
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
